--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,84 @@
+version: '3'
+
 services:
-
-  # Zookeeper for Kafka
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.4.0
-    container_name: nasa_zookeeper
+  # Airflow Init
+  airflow-init:
+    image: apache/airflow:3.0.6
+    container_name: nasa_airflow_init
+    entrypoint: /bin/bash
+    command: >
+      -c "
+      pip install apache-airflow-providers-snowflake kafka-python snowflake-connector-python dbt-core dbt-snowflake psycopg2-binary &&
+      airflow db migrate &&
+      airflow users create -r Admin -u admin -e admin@example.com -f admin -l user -p admin &&
+      airflow connections add 'postgres_default'
+        --conn-type 'postgres'
+        --conn-login 'postgres'
+        --conn-password '1234'
+        --conn-host 'host.docker.internal'
+        --conn-port '5432'
+        --conn-schema 'airflow'
+      "
     environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - "2181:2181"
+      - AIRFLOW__CORE__EXECUTOR=LocalExecutor
+      - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://postgres:1234@host.docker.internal:5432/airflow
+      - AIRFLOW__CORE__LOAD_EXAMPLES=False
+    volumes:
+      - ./Airflow/dags:/opt/airflow/dags
+      - ./Airflow/logs:/opt/airflow/logs
+      - ./Airflow/plugins:/opt/airflow/plugins
+      - ./DBT:/opt/airflow/dbt
+      - ./ML:/opt/airflow/project/ML
+      - ./Kafka:/opt/airflow/project/Kafka
     networks:
       - iot-network
-    restart: unless-stopped
 
-  # Kafka message broker
-  kafka:
-    image: confluentinc/cp-kafka:7.4.0
-    container_name: nasa_kafka
+  # Airflow Webserver
+  airflow-webserver:
+    image: apache/airflow:3.0.6
+    container_name: nasa_airflow_webserver
     depends_on:
-      - zookeeper
+      - airflow-init
+    command: api-server
     ports:
-      - "9092:9092"
+      - "8080:8080"
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: nasa_zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://nasa_kafka:29092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      - AIRFLOW__CORE__EXECUTOR=LocalExecutor
+      - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://postgres:1234@host.docker.internal:5432/airflow
+      - AIRFLOW__CORE__LOAD_EXAMPLES=False
+    volumes:
+      - ./Airflow/dags:/opt/airflow/dags
+      - ./Airflow/logs:/opt/airflow/logs
+      - ./Airflow/plugins:/opt/airflow/plugins
+      - ./DBT:/opt/airflow/dbt
+      - ./ML:/opt/airflow/project/ML
+      - ./Kafka:/opt/airflow/project/Kafka
     networks:
       - iot-network
     restart: unless-stopped
 
-
+  # Airflow Scheduler
+  airflow-scheduler:
+    image: apache/airflow:3.0.6
+    container_name: nasa_airflow_scheduler
+    depends_on:
+      - airflow-init
+    command: scheduler
+    environment:
+      - AIRFLOW__CORE__EXECUTOR=LocalExecutor
+      - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://postgres:1234@host.docker.internal:5432/airflow
+      - AIRFLOW__CORE__LOAD_EXAMPLES=False
+    volumes:
+      - ./Airflow/dags:/opt/airflow/dags
+      - ./Airflow/logs:/opt/airflow/logs
+      - ./Airflow/plugins:/opt/airflow/plugins
+      - ./DBT:/opt/airflow/dbt
+      - ./ML:/opt/airflow/project/ML
+      - ./Kafka:/opt/airflow/project/Kafka
+    networks:
+      - iot-network
+    restart: unless-stopped
 
 networks:
   iot-network:
-    name: rt360_network
     driver: bridge
